# gentle

./: .gitignore  CMakeLists.txt  README.md  build.ninja
include/: gentle.h
src/: gentle.c
test-resources/: job.yml
test-sys/: gentle-test.py
tools/: ninja.gen.sh
